# cookiecutter_uv

./: .gitignore  Makefile  README.md  cookiecutter.json
.github/workflows/: cicd.yaml
hooks/: post_gen_project.sh
tests/: test.sh
the_template_project/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
the_template_project/.github/workflows/: cicd.yaml
the_template_project/docs/: Makefile
the_template_project/docs/source/: api_reference.rst  conf.py  index.rst
the_template_project/src/the_template_project/: __init__.py  main.py  utils.py
the_template_project/tests/: test_the_template_project.py
{{ cookiecutter.project_slug }}/: Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: cicd.yaml
{{ cookiecutter.project_slug }}/docs/source/: conf.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: main.py  utils.py
